@@ -35,6 +35,7 @@
 
 #include <string.h>
 
+#include "scip/expr.h"
 #include "scip/pub_expr.h"
 #include "scip/expr_product.h"
 #include "scip/expr_sum.h"
@@ -2203,7 +2204,7 @@ SCIP_DECL_EXPRINTEGRALITY(integralityProduct)
    exprdata = SCIPexprGetData(expr);
    assert(exprdata != NULL);
 
-   *integrality = EPSISINT(exprdata->coefficient, 0.0) ? SCIP_IMPLINTTYPE_STRONG : SCIP_IMPLINTTYPE_NONE; /*lint !e835*/
+   *integrality = SCIPvalueIntegrality(exprdata->coefficient);
 
    for( i = 0; i < SCIPexprGetNChildren(expr) && *integrality != SCIP_IMPLINTTYPE_NONE; ++i )
    {
